# geoflow

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  eslint.config.mjs  mise.toml  package-lock.json  package.json  playwright.config.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.cargo/: config.toml
.github/workflows/: ci.yml  gh-pages.yml  release.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  core.ts  delta.ts  location-groups.ts  merge.ts  rulesets.ts  topo-api.ts  types.ts  vite-env.d.ts
apps/web/src/components/: ConflictResolver.tsx  Disclaimer.tsx  ProjectManager.tsx
apps/web/src/export/: excel.ts  geopackage.ts  utils.ts
apps/web/src/ground-model/: ExportStep.tsx  GroundModelMode.tsx  GroupsStep.tsx  LayersStep.tsx  ParametersStep.tsx  state.ts
apps/web/src/plots/: shared.test.ts  shared.tsx
apps/web/src/query/: duckdb.ts  presets.ts
apps/web/src/storage/: db.ts  types.ts
apps/web/src/tabs/: ConvertTab.tsx  CorrelationsTab.tsx  CptTab.tsx  DataTab.tsx  DescribeTab.tsx  DiffTab.tsx  EditTab.tsx  FieldTestsTab.tsx  FixTab.tsx  InfoTab.tsx  InspectTab.tsx  LineageModal.tsx  MapTab.tsx  OverviewTab.tsx  PlotsTab.tsx  QueryTab.tsx  ReportTab.tsx  RulesTab.tsx  SearchTab.tsx  SectionTab.tsx  ThreeDTab.tsx  TransformTab.tsx  ValidateTab.tsx  VoxelTab.tsx
apps/web/src/transform/: SqlNodeEditor.tsx  examples.ts  executor.ts  nodes.tsx  persistence.ts
crates/geoflow-cli/: Cargo.toml
crates/geoflow-cli/src/: main.rs
crates/geoflow-cli/tests/: cli.rs
crates/geoflow-core/: Cargo.toml
crates/geoflow-core/src/: ags.rs  ags3.rs  crossfile.rs  datum.rs  dedupe.rs  describe.rs  diagnostics.rs  dict.rs  diff.rs  diggs.rs  dsl.rs  explorer.rs  explorer_data.rs  export.rs  fix.rs  lib.rs  merge.rs  model.rs  render.rs  score.rs  semantic.rs  spatial.rs  typecheck.rs  validate.rs
crates/geoflow-core/src/ags/: lexer.rs  parser.rs  serializer.rs
crates/geoflow-core/src/db/: geometry.rs  ingest.rs  mod.rs  query.rs  schema.rs
crates/geoflow-core/src/dsl/: codelist.rs  context.rs  eval.rs  pack.rs
crates/geoflow-core/src/explorer/: base.html  borehole.html  borehole_svg.html  certificate.html  fix_log.html  group.html  map.html  overview.html  validation.html
crates/geoflow-core/src/validate/: rules.rs
crates/geoflow-core/tests/: diggs_fixtures.rs  explorer.rs  round_trip.rs  rule_packs.rs  validation_parity.rs
crates/geoflow-desktop/: Cargo.toml
crates/geoflow-desktop/src/: lib.rs  main.rs
crates/geoflow-py/: Cargo.toml  README.md  geoflow.pyi  pyproject.toml
crates/geoflow-py/src/: lib.rs
crates/geoflow-py/tests/: test_smoke.py
crates/geoflow-wasm/: Cargo.toml
crates/geoflow-wasm/src/: lib.rs
examples/rules/: ice_mini.yml
rules/specs/ags/dict/: ags4.yml
rules/specs/ags/standard/4.x/: pack.yml
rules/specs/bgs/standard/1.x/: pack.yml
rules/specs/ice/: README.md
rules/specs/ice/mini/0.1/: pack.yml  sample_types.yml
scripts/: capture-rust-baselines.ts  inventory-cel.ts
spec/: 001_initial_plan.md  002_expanded_plan.md  003_locked_plan.md  004_diggs_coverage_matrix.md  005_ags_gap_analysis.md  006_project_ontology.md  007_typescript_migration_plan.md  008_feature_alternatives_review.md
tests/browser/: 3d.spec.ts  explorer.spec.js  voxel.spec.ts
tests/e2e-cli/: cli.e2e.ts  geo3d.e2e.ts  vitest.config.ts
tests/fixtures/ags/: README.md  abbr_codelist_invalid.ags  abbr_codelist_valid.ags  browser_explorer.ags  empty_group.ags  encoding_win1252.ags  fixable.ags  geol_overlap.ags  ice_mini_invalid.ags  ice_mini_invalid.diagnostics.json  ice_mini_valid.ags  key_dup_loca.ags  lab_data_comprehensive.ags  minimal_valid.ags  nonstandard_heading.ags  samp_key_dup.ags  sample_v3.ags  short_row.ags  tran_ags_4_1_1.ags  tran_ags_4_2.ags  tran_version_warn.ags  unit_codelist_invalid.ags  unit_codelist_valid.ags  xref_multi_invalid.ags
tests/fixtures/diggs/: README.md  minimal_subset.diggs
tests/parity/: whitelist.ts
tests/parity/baselines/convert/abbr_codelist_invalid.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/abbr_codelist_valid.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/browser_explorer.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/empty_group.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/encoding_win1252.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/fixable.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/geol_overlap.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/ice_mini_invalid.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/ice_mini_valid.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/key_dup_loca.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/minimal_subset.diggs/: _home_samotron_dev_geoflow_temp_out_ags___to_ags_stdout.txt
tests/parity/baselines/convert/minimal_valid.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/nonstandard_heading.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/samp_key_dup.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/sample_v3.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/baselines/convert/short_row.ags/: _home_samotron_dev_geoflow_temp_out_diggs___to_diggs_stdout.txt
tests/parity/rules/: baselines.json
web/: index.html
(+100 files in other folders)
