[workspace]
resolver = "2"
members = [
    "crates/geoflow-core",
    "crates/geoflow-cli",
    "crates/geoflow-desktop",
    "crates/geoflow-py",
    "crates/geoflow-wasm",
]

[workspace.package]
# CalVer: YYYY.MMDD.N — year, month+day (no leading zero), daily build sequence.
# Example: 2026.506.0 = 2026-05-06 build 0; same-day second build = 2026.506.1.
version = "2026.506.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/samotron/geoflow"
homepage = "https://github.com/samotron/geoflow"
authors = ["GeoFlow contributors"]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing / data
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1"
encoding_rs = "0.8"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# DSL engine
cel-interpreter = "0.10"
geo = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }
owo-colors = "4"

# Web / explorer
minijinja = "2"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "net"] }

# Python bindings (Milestone 8)
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

# Local DB (GeoPackage via SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }

# Self-upgrade (HTTP + archive extraction)
ureq = { version = "2", features = ["tls"] }
flate2 = "1"
tar = "0.4"

# Testing
insta = "1"
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
