[package]
name = "geoflow-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line interface for the GeoFlow geotechnical toolkit."

[[bin]]
name = "geoflow"
path = "src/main.rs"

[dependencies]
geoflow-core = { path = "../geoflow-core", version = "2026.506.0", features = ["db"] }
rusqlite = { workspace = true }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
owo-colors.workspace = true
axum.workspace = true
tokio.workspace = true
chrono.workspace = true
ureq.workspace = true
flate2.workspace = true
tar.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
