[package]
name = "geoflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core library for the GeoFlow geotechnical data toolkit (AGS, DIGGS, validation)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
quick-xml.workspace = true
csv.workspace = true
encoding_rs.workspace = true
indexmap.workspace = true
regex.workspace = true
chrono.workspace = true
cel-interpreter.workspace = true
geo.workspace = true
minijinja.workspace = true
rusqlite = { workspace = true, optional = true }

[features]
db = ["dep:rusqlite"]

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
