[package]
name = "geoflow-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Desktop GUI for the GeoFlow geotechnical data toolkit."

[[bin]]
name = "geoflow-desktop"
path = "src/main.rs"

[dependencies]
geoflow-core = { path = "../geoflow-core", version = "2026.506.0" }
anyhow.workspace = true

eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.31"
rfd = "0.15"
sha2.workspace = true
hex.workspace = true
rust_xlsxwriter = { version = "0.79", default-features = false }
calamine = "0.26"
