[package]
name = "geoflow-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Python bindings for the GeoFlow geotechnical data toolkit (PyO3)."
publish = false

[lib]
name = "geoflow"
crate-type = ["cdylib", "rlib"]

[dependencies]
geoflow-core = { path = "../geoflow-core" }
pyo3.workspace = true
serde_json.workspace = true
