[package]
name = "geoflow-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WebAssembly bindings for the GeoFlow geotechnical toolkit."

[lib]
crate-type = ["cdylib"]

[dependencies]
geoflow-core = { path = "../geoflow-core" }
serde_json.workspace = true
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
